PZ-48| Test framework PearlZip | Updating parameters on maven compile plugin to ensure UI build succeeds